# haskgl

./: .gitignore  CMakeLists.txt  Lexer.cpp  Lexer.h  NodeType.h  README.md  Token.h  ast_node.h  flag.h  full.fgl  haskgl.cpp  haskgl.sln  haskgl.vcxproj  parser.cpp  parser.h  program.fgl
assets/: assignment.hgl  data.hgl  full.hgl  function.hgl  phong.hgl  program.hgl
assets/std/: core.hgl  math.hgl  operator.hgl  types.hgl
assets/tests/: basic_if.hgl  bool_expr.hgl
